# SampleRustWorkspace

./: Cargo.toml  README
src/cli/: Cargo.toml
src/cli/src/: main.rs
src/lib/: Cargo.toml
src/lib/src/: lib.rs  util.rs
src/lib/src/util/: file.rs  math.rs
src/server/: Cargo.toml
src/server/src/: main.rs
