[package]
name = "SampleWorkspace"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = { version = "3.1.0", features = ["cargo"] }
actix-web = { version = "4", features = ["openssl"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
rayon = "1.5.1"
indicatif = "0.16.2"

[workspace]
members = ["src/cli", "src/lib", "src/server"]

[lib]
name = "libsample"
path = "src/lib/src/lib.rs"

[[bin]]
name = "my-server"
path = "src/server/src/main.rs"

[[bin]]
name = "sample-tool"
path = "src/cli/src/main.rs"
